--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,3 @@
-<%= SimpleCalendar::BusinessWeekCalendar.new(self, {}).render do |date| %>
+<%= render SimpleCalendar::BusinessWeekCalendar.new(self, {}) do |date| %>
   <%= date %>
 <% end %>
