--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,3 @@
-<%= render SimpleCalendar::BusinessWeekCalendar.new(self, {}) do |date| %>
+<%= simple_calendar_business_calendar do |date| %>
   <%= date %>
 <% end %>
